--- a/package.json
+++ b/package.json
@@ -2,18 +2,29 @@
   "name": "ratp-fidesio",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "email": "ibrahima.dansoko@outlook.com",
+    "name": "Ibrahima DANSOKO"
+  },
   "dependencies": {
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.1",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.11",
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.18.1",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
+    "react-table": "^7.7.0",
+    "styled-components": "^5.3.0",
+    "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
