--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.11",
     "axios": "^0.21.1",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.0.1",
+    "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.18.1",
@@ -49,6 +52,22 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "echo 'lint-stage' "
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "npm run lint:eslint:fix",
+      "prettier --write",
+      "git add --force"
+    ],
+    "*.json": [
+      "prettier --write",
+      "git add --force"
     ]
   }
 }
