--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "react-query": "^3.18.1",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
+    "shx": "^0.3.3",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "init": "shx cp .env.sample .env",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
