--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,2 @@
 REACT_APP_RATP_API_KEY="https://data.ratp.fr/api/records/1.0/search/?dataset=liste-des-commerces-de-proximite-agrees-ratp"
+PORT=3000
